[package]
name = "grpc-tutorial"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grpc-server"
path = "src/grpc_server.rs"

[[bin]]
name = "grpc-client"
path = "src/grpc_client.rs"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
